@@ -1,0 +1,9 @@
+From: bob@bob
+Newsgroups: test
+Subject: text test
+Message-ID: <1@mbox.testdata>
+Date: Fri, 07 Jun 2002 22:18:11 GMT
+Lines: 2
+
+This is a test, it is
+From me whee!
