@@ -1,0 +1,13 @@
+From: ralph@bob
+Newsgroups: test
+Subject: text test
+Message-ID: <2@mbox.testdata>
+References: <1@mbox.testdata>
+Date: Fri, 07 Jun 2002 22:19:11 GMT
+Lines: 5
+
+>This is a test, it is
+>From me whee!
+No, it is
+From me!
+haha!
